<resources>
    <string name="app_name" translatable="false">GUI Programming</string>
   <!--Movie app strings-->
    <string name="movie_app_name" translatable="false">Movie Information</string>
    <string name="movie_continue" translatable="false">Continue</string>

    <string name="movie_please_wait">Please wait…</string>

    <string name="movie_select_lang_toast">English is selected as default language!</string>
    <string name="movie_welcome">WELCOME</string>
    <string name="movie_hint_movie_name">Search for movie or TV show…</string>
    <string name="movie_settings">Settings</string>
    <string name="movie_help">Help</string>
    <string name="movie_favorites">Favorites</string>
    <string name="movie_add_to_string_favorites">Add to favorites</string>
    <string name="movie_remove_from_favorites">Remove from favorites</string>
    <string name="movie_got_it">Okay</string>

    <string name="movie_how_to_use">HOW TO USE</string>
    <string name="movie_home_screen">HOME SCREEN</string>
    <string name="movie_fav_screen">FAVORITES SCREEN</string>
    <string name="movie_detail_screen">MOVIE DETAIL SCREEN</string>
    <string name="movie_help_search_tab">This is a Search screen, to get information about a movie or TV show, you can type its name.</string>
    <string name="movie_help_movie_desc">From the movie list you will be redirected here, on this screen you can view movie/TV show information as well as you can add/remove a movie information to favorites offline.</string>
    <string name="movie_help_fav">This is favorites screen, in this you can view information about your favorite movie or TV show</string>

    <string name="movie_snackbar_text_movie_removed">Movie removed from favorites!</string>
    <string name="movie_snackbar_text_movie_unable_remove">Unable to remove from favorites!</string>
    <string name="movie_snackbar_text_movie_added">Movie added to favorites!</string>
    <string name="movie_snackbar_text_movie_unable_add">Unable to add Movie to favorites!</string>
    <string name="movie_no_of_saved_movies">No. of saved movies:</string>
    <string name="movie_shortest_movie_runtime">Shortest movie runtime:</string>
    <string name="movie_average_movie_runtime">Average movie runtime:</string>
    <string name="movie_longest_movie_runtime">Longest movie runtime:</string>
    <string name="movie_min">min</string>
    <string name="movie_statistics">Statistics</string>
    <string name="movie_movieDetails">Movie details</string>

    <!--Food app strings-->
    <string name="food_app_name" translatable="false">FoodNutrition</string>
    <string name="food_please_wait">Please wait…</string>
    <string name="food_hint_enter_text">Enter ingredient title to search…</string>

    <string name="food_add_to_string_favorites">Add to favorites</string>
    <string name="food_remove_from_favorites">Remove from favorites</string>

    <string name="food_snackbar_text_item_removed">Ingredient removed from favorites!</string>
    <string name="food_snackbar_text_item_unable_remove">Unable to remove ingredient from favorites!</string>
    <string name="food_snackbar_text_item_added">Ingredient added to favorites!</string>
    <string name="food_snackbar_text_item_unable_add">Unable to add ingredient to favorites!</string>
    <string name="food_sugg_add_ingr">Add ingredients to favorites to view statistics!</string>

    <string name="food_statistics">Statistics</string>
    <string name="food_help">Help</string>
    <string name="food_nutrients_table">nutrients table</string>
    <string name="food_energy">Energy</string>
    <string name="food_protein">Protein</string>
    <string name="food_fat">fat</string>
    <string name="food_carbs">Carbs</string>
    <string name="food_enter_tag_to_set">Enter TAG to set</string>
    <string name="food_cancel">Cancel</string>
    <string name="food_ok">OK</string>
    <string name="food_total_data">Total saved ingredients:</string>
    <string name="food_total_calories">Total calories:</string>
    <string name="food_minimum_calories">Minimum calories:</string>
    <string name="food_average_calories">Average calories:</string>
    <string name="food_maximum_calories">Maximum calories:</string>
    <string name="food_category">Category:</string>

    <string name="food_how_to_use">HOW TO USE</string>
    <string name="food_home_screen">HOME SCREEN</string>
    <string name="food_fav_screen">FAVORITES SCREEN</string>
    <string name="food_got_it">Got it</string>
    <string name="food_help_search_tab">This is a Search screen, to get information about different ingredients, you can type its name.</string>
    <string name="food_help_fav">This is a Favorites screen, you can view previously saved ingredient list in this.</string>
    <string name="food_ingredient_detail_screen">INGREDIENT DETAILS SCREEN</string>
    <string name="food_help_detail_screen">From the list of ingredients, you will be redirected here. On this screen you can see the nutrition of an ingredient.</string>

    <!--CBC app -->
    <string name="cbc_app_name" translatable="false">CBC News reader</string>
    <string name="cbc_author">Author:</string>
    <string name="cbc_published_date">Published date:</string>
    <string name="cbc_category">Category:</string>
    <string name="cbc_read_more_view_in_browser">READ MORE (VIEW IN BROWSER)</string>
    <string name="cbc_save_article_offline">Save article offline</string>
    <string name="cbc_remove_offline_article">Remove article from offline</string>
    <string name="cbc_snack_removed">Article removed from offline!</string>
    <string name="cbc_snack_removed_fail">Unable to remove article from offline!</string>
    <string name="cbc_snack_add">Article saved offline!</string>
    <string name="cbc_snack_add_fail">Unable to save article offline!</string>

    <string name="cbc_sugg_save">Save articles offline to view statistics!</string>
    <string name="cbc_stat_max_word_count">Maximum word count</string>
    <string name="cbc_stat_min_word_count">Minimum word count</string>
    <string name="cbc_stat_avg_word_count">Average word count</string>

    <string name="cbc_how_to_use">HOW TO USE</string>
    <string name="cbc_home_screen">HOME SCREEN</string>
    <string name="cbc_fav_screen">FAVORITES SCREEN</string>
    <string name="cbc_detail_screen">News detail screen</string>
    <string name="cbc_got_it">Got it</string>

    <string name="cbc_help_search_scr">This is a news feeds screen, you can view latest news titles from CBC news.
    Click on the title to read detailed article.</string>
    <string name="cbc_help_saved">This is a saved articles screen,
        you can see a list of news articles\' title already saved in it.
        Click on the title to read detailed article.</string>
    <string name="cbc_help_detail_screen">You will be redirected at this screen when you
        click on the news title. You can read short article here, you can also save the article
        offline to view later. You can also read detailed article by clicking the
        \"READ MORE (VIEW IN BROWSER)\" button.</string>

    <!--OC transpo app strings-->
    <string name="oc_app_name" translatable="false">OCTranspo Bus Route</string>
    <string name="oc_hint_route_no">Enter route number…</string>

    <string name="oc_statistics">Statistics</string>
    <string name="oc_help">Help</string>
    <string name="oc_destination">Destination</string>
    <string name="oc_start_time">Start time</string>
    <string name="oc_stop">Stop</string>
    <string name="oc_route">Route</string>
    <string name="oc_trip_start_time">Trip start time</string>
    <string name="oc_route_no">Route no</string>
    <string name="oc_directionid">DirectionID</string>
    <string name="oc_direction">Direction</string>
    <string name="oc_routeheading">RouteHeading</string>
    <string name="oc_route_label">Route label</string>
    <string name="oc_showing_route_directions_for">Showing route-directions for:</string>
    <string name="oc_select_trip_route">Select trip route</string>
    <string name="oc_select_route_direction">Select route-direction</string>
    <string name="oc_bus_stop">Bus Stop</string>
    <string name="oc_request_time">Request time</string>
    <string name="oc_delay">Delay</string>
    <string name="oc_speed">Speed</string>
    <string name="oc_latitude">Latitude</string>
    <string name="oc_longitude">Longitude</string>
    <string name="oc_save_offline">Save offline</string>
    <string name="oc_remove_offline">Remove from offline</string>
    <string name="oc_snack_hint_saved">Trip details saved!</string>
    <string name="oc_snack_hint_save_fail">Unable to save details!</string>
    <string name="oc_snack_hint_remove">Trip removed from offline!</string>
    <string name="oc_snack_hint_remove_fail">Unable to delete details!</string>
    <string name="oc_query_details">Query details</string>
    <string name="oc_trip_details">Trip details</string>
    <string name="oc_location_details">Location details</string>
    <string name="oc_how_to_use">HOW TO USE</string>
    <string name="oc_home_screen">HOME SCREEN</string>
    <string name="oc_favs_screen">FAVORITES SCREEN</string>
    <string name="oc_got_it">Got it</string>
    <string name="oc_help_search_tab">This is a search screen, to get route summary and next route information, enter the route number</string>
    <string name="oc_help_saved">This is a saved trips screen, you can see a list of trips already saved in it.</string>
    <string name="oc_detail_screen">DETAILS SCREEN</string>
    <string name="oc_help_detail_screen">You can view all the information about a trip; like - bus speed,
        its current latitude and longitude, trip start time, delay, destination, request time.</string>
    <string name="oc_sugg_save">Save trips offline to view statistics!</string>
    <string name="oc_total_data">Total saved trips:</string>
    <string name="oc_minimum_delay">Minimum delay</string>
    <string name="oc_average_delay">Average delay</string>
    <string name="oc_maximum_delay">Maximum delay</string>
    <string name="oc_stop_name">Stop Name</string>
    <string name="oc_data_not_available">Data not available on the server!</string>
</resources>
